k8s/base-old/structs/external-dns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: external-dns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  namespace: external-dns
spec:
  selector:
    matchLabels:
      app: external-dns
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      containers:
      - args:
        - --source=service
        - --source=ingress
        - --provider=aws
        - --domain-filter=mino-stage.enva.gen6bk.com
        - --aws-zone-type=public
        - --registry=txt
        - --txt-owner-id=my-hostedzone-identifier
        image: registry.opensource.zalan.do/teapot/external-dns:latest
        name: external-dns
      securityContext:
        fsGroup: 65534
      serviceAccountName: external-dns
