k8s/base-old/structs/fluentd.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    k8s-app: fluentd-logging
    version: v1
  name: fluentd
  namespace: kube-system
spec:
  selector:
    matchLabels:
      k8s-app: fluentd-logging
      version: v1
  template:
    metadata:
      labels:
        k8s-app: fluentd-logging
        version: v1
    spec:
      containers:
      - env:
        - name: FLUENTD_OPTS
          value: --no-supervisor -q
        - name: FLUENT_ELASTICSEARCH_HOST
          value: elasticsearch-es-http.eck.svc
        - name: FLUENT_ELASTICSEARCH_PORT
          value: "9200"
        - name: FLUENT_ELASTICSEARCH_SCHEME
          value: https
        - name: FLUENT_ELASTICSEARCH_SSL_VERIFY
          value: "true"
        - name: FLUENT_ELASTICSEARCH_SSL_CA_FILE
          value: /fluentd/etc/elastic/ca.crt
        - name: FLUENT_ELASTICSEARCH_SSL_VERSION
          value: TLSv1_2
        - name: FLUENT_ELASTICSEARCH_USER
          value: elastic
        - name: FLUENT_ELASTICSEARCH_PASSWORD
          valueFrom:
            secretKeyRef:
              key: elastic
              name: elasticsearch-es-elastic-user
        - name: FLUENT_ELASTICSEARCH_ILM
          value: "true"
        - name: FLUENT_ELASTICSEARCH_ILM_POLICY_ID
          value: logstash-policy
        - name: FLUENT_ELASTICSEARCH_ILM_POLICY
          value: '{"policy":{"phases":{"hot":{"min_age":"0ms","actions":{"rollover":{"max_age":"1d","max_size":"5gb"},"set_priority":{"priority":10}}},"warm":{"actions":{"allocate":{"include":{},"exclude":{},"require":{"data":"warm"}},"set_priority":{"priority":20}}},"cold":{"min_age":"7d","actions":{"freeze":{},"set_priority":{"priority":30}}},"delete":{"min_age":"90d","actions":{"delete":{}}}}}} '
        - name: FLUENT_ELASTICSEARCH_ILM_POLICY_OVERWRITE
          value: "true"
        - name: FLUENT_ELASTICSEARCH_LOG_ES_400_REASON
          value: "true"
        - name: FLUENT_ELASTICSEARCH_TEMPLATE_NAME
          value: logstash-template
        - name: FLUENT_ELASTICSEARCH_TEMPLATE_FILE
          value: /fluentd/etc/logstash.template
        - name: FLUENT_ELASTICSEARCH_REQUEST_TIMEOUT
          value: 120s
        - name: FLUENT_ELASTICSEARCH_ROLLOVER_INDEX
          value: "true"
        - name: FLUENT_ELASTICSEARCH_CUSTOMIZE_TEMPLATE
          value: '{"<<index_prefix>>": "logstash"}'
        - name: K8S_NODE_NAME
          valueFrom:
            fieldRef:
              fieldPath: spec.nodeName
        image: fluent/fluentd-kubernetes-daemonset:v1.11.1-debian-elasticsearch7-1.1
        name: fluentd
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 128m
            memory: 256Mi
        volumeMounts:
        - mountPath: /var/log
          name: varlog
        - mountPath: /var/lib/docker/containers
          name: varlibdockercontainers
          readOnly: true
        - mountPath: /fluentd/etc
          name: config-volume
        - mountPath: /fluentd/etc/elastic
          name: elastic-cert
          readOnly: true
      serviceAccount: fluentd
      serviceAccountName: fluentd
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
      volumes:
      - hostPath:
          path: /var/log
        name: varlog
      - hostPath:
          path: /var/lib/docker/containers
        name: varlibdockercontainers
      - configMap:
          name: fluentd-config
        name: config-volume
      - name: elastic-cert
        secret:
          secretName: elasticsearch-es-http-certs-public
