k8s/base-old/structs/nexus.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexus
---
apiVersion: v1
kind: Service
metadata:
  name: nexus-0
  namespace: nexus
spec:
  ports:
  - name: http-main
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: nexus
    group: service
    statefulset.kubernetes.io/pod-name: nexus-0
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nexus-web
    group: service
  name: nexus
  namespace: nexus
spec:
  clusterIP: None
  ports:
  - name: http-main
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: nexus
    group: service
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: nexus
    group: service
  name: nexus
  namespace: nexus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus
  serviceName: nexus
  template:
    metadata:
      labels:
        app: nexus
        group: service
    spec:
      containers:
      - image: sonatype/nexus3:3.19.0
        name: nexus
        ports:
        - containerPort: 8081
          protocol: TCP
        volumeMounts:
        - mountPath: /nexus-data
          name: nexus-storage
      securityContext:
        fsGroup: 2000
        runAsGroup: 2000
        runAsUser: 200
  volumeClaimTemplates:
  - metadata:
      name: nexus-storage
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 20Gi
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-external
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: nexus
  namespace: nexus
spec:
  rules:
  - host: nexus.example.com
    http:
      paths:
      - backend:
          serviceName: nexus-0
          servicePort: 8081
        path: /
  tls:
  - hosts:
    - nexus.example.com
    secretName: nexus-tls-secret
